--- a/frontend/css/mobile.css
+++ b/frontend/css/mobile.css
@@ -98,10 +98,7 @@
   }
 
   .tablet-logo {
-    max-height: 70%;
-    max-width: 70%;
-    height: auto;
-    width: auto;
+    height: 80%;
     object-fit: contain;
     flex: 0 0 auto;
   }
@@ -218,7 +215,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 68%;
+    width: 63%;
     height: 80%;
     background-color: var(--color-paper-white);
     border-top-left-radius: 20px;
@@ -240,7 +237,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 5px 20px;
     border-bottom: 2px solid var(--color-border);
     background-color: var(--color-deep-teal);
     border-top-left-radius: 20px;
@@ -258,10 +255,10 @@
     background: transparent;
     border: 2px solid var(--color-paper-white);
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     color: var(--color-paper-white);
-    font-size: 2rem;
+    font-size: 1.5rem;
     line-height: 1;
     cursor: pointer;
     display: flex;
