--- a/frontend/css/mobile.css
+++ b/frontend/css/mobile.css
@@ -52,6 +52,7 @@
     grid-template-rows: 10% 90%;
     gap: 0;
     box-sizing: border-box;
+    overflow: hidden;
   }
 
   /* Hide desktop sidebar and controls bar */
