--- a/frontend/css/modals.css
+++ b/frontend/css/modals.css
@@ -90,22 +90,22 @@
 }
 
 .modal-logo {
-  width: 250px;
-  height: 250px;
+  width: 150px;
+  height: auto;
   object-fit: contain;
   margin-bottom: 20px;
   filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
 }
 
 .logo-container h3 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bold;
   margin: 0 0 10px 0;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .logo-container p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   opacity: 0.9;
   margin: 30px;
   font-weight: 300;
@@ -113,20 +113,20 @@
 
 .auth-form-header {
   text-align: center;
-  margin: 30px;
+  margin: 20px;
 }
 
 .auth-form-header h2 {
-  font-size: var(--font-size-lg);
+  font-size: 1.5rem;
   font-weight: bold;
   color: var(--color-text);
 }
 
-.auth-form-header p {
+/* .auth-form-header p {
   color: var(--color-text-light);
   font-size: 1rem;
   margin: 0;
-}
+} */
 
 .close-btn {
   position: absolute;
@@ -158,7 +158,7 @@
 .auth-form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
 }
 
 .form-group {
@@ -193,7 +193,7 @@
 .form-actions {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
   margin-top: 10px;
 }
 
@@ -203,8 +203,7 @@
   font-size: var(--font-size-md);
   background-color: var(--color-deep-teal);
   color: var(--color-paper-white);
-  font-weight: 600;
-  height: 48px;
+  height: 40px;
   align-self: center;
   display: flex;
   align-items: center;
@@ -213,13 +212,13 @@
 
 .auth-links {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 5px;
 }
 
 .forgot-password {
   color: var(--color-deep-teal);
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   transition: color 0.2s;
 }
 
